# samp-linux

./: .gitignore  CMakeLists.txt  README.md
data/: paths.qrc
data/icons/: ICON_ATLAS.ase
data/styles/: style.qss
packaging/: samp-linux.desktop
resources/: resources.qrc
resources/styles/: style.qss
src/: directconnectdialog.cpp  directconnectdialog.h  favoritesmanager.cpp  favoritesmanager.h  helper.cpp  helper.h  launcher.cpp  launcher.h  main.cpp  mainwindow.cpp  mainwindow.h  qutils.cpp  qutils.h  sampquery.cpp  sampquery.h  serverinfo.h  serverlistmodel.cpp  serverlistmodel.h  serverpropertiesdialog.cpp  serverpropertiesdialog.h  settingsdialog.cpp  settingsdialog.h
